--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   lottie: ^3.1.2
   go_router: ^14.1.4
+  animated_toggle_switch: ^0.8.2
+  font_awesome_flutter: ^10.7.0
 
 dev_dependencies:
   flutter_test:
