--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   go_router: ^14.1.4
   animated_toggle_switch: ^0.8.2
   font_awesome_flutter: ^10.7.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
