--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   animated_toggle_switch: ^0.8.2
   font_awesome_flutter: ^10.7.0
   provider: ^6.1.2
+  expressions: ^0.2.5+1
 
 dev_dependencies:
   flutter_test:
